fix and style scrollbar inside columns

--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -1,5 +1,6 @@
 .CardContainer {
 	position: relative;
+	width: 100%;
 	background-color: var(--card-color);
 	font-size: 0.9rem;
 	border: 2px solid transparent;
