--- a/src/components/Column/Header/index.module.scss
+++ b/src/components/Column/Header/index.module.scss
@@ -4,6 +4,7 @@
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 0.6rem;
+	padding: 0 0.6rem;
 	font-size: 1rem;
 	font-weight: bold;
 
