--- a/src/components/Column/index.module.scss
+++ b/src/components/Column/index.module.scss
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 0.6rem;
+	padding: 0.6rem 0;
 	background-color: var(--bg-color);
 	border-radius: 10px;
 	overflow: hidden;
@@ -54,20 +54,25 @@
 		justify-content: center;
 		align-items: center;
 		margin-bottom: 0.6rem;
+		padding: 0 0.6rem;
 		gap: 0.35rem;
+		// This thing with padding and margin right is 
+		// to keep the stylinig nice even when scrollbar is visible
+		padding-right: 0.3rem;
+		margin-right: 0.3rem;
 		overflow-y: auto;
 
 		&::-webkit-scrollbar {
-			width: 0.6rem;
+			width: 0.5rem;
 		}
 
 		&::-webkit-scrollbar-track {
 			border-radius: 10px;
-			background: red;
+			background: var(--color-column-scrollbar-track);
 		}
 
 		&::-webkit-scrollbar-thumb {
-			background-color: var(--card-color);
+			background-color: var(--color-column-scrollbar-thumb);
 			border-radius: 10px;
 		}
 	}
@@ -78,8 +83,9 @@
 		justify-content: flex-start;
 		align-items: center;
 		gap: 0.5rem;
+		padding: 0 0.6rem;
 
-		button.AddCard {
+		&>button.AddCard {
 			flex: 1;
 			display: flex;
 			align-items: center;
